# LocalLens

./: .env_example  .gitignore  README.md  gui.spec  main.py  pyproject.toml
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-template.yml  docs-template.yml  epic-template.yml  exp-template.yml  feat-template.yml  refactor-template.yml
.github/template/: release-drafter.yml
.github/workflows/: pr-labeler.yml  release_drafter.yml
app/: gui.py  main.py
app/api/routes/: search.py
app/services/: base_encoder.py  encoder.py  file_manager.py  image_encoder.py  mock_search_engine.py  pdf_encoder.py  pdf_processor.py  search_engine.py  text_encoder.py  vector_store.py  vlm_clova.py  vlm_mock.py
config/: config.yaml
data/: check_pkl.ipynb  embeddings.pkl
frontend/MIRFrontend/: MIRFrontend.sln
frontend/MIRFrontend/MIRFrontend/: ApiClient.cs  Form1.cs  MIRFrontend.csproj  Program.cs
frontend/MIRFrontend/MIRFrontend/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
test/: test_FAST_API.py  test_encoder.py  test_search_engine.py  test_vlm_and_pdf_processor.py
test/test_dir/ACEDW/: bubu.txt
test/test_dir_pdf/extracted_images/: sample.txt
